--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@babel/runtime": "^7.12.5",
     "core-js": "^3.10.0",
     "vue": "^2.6.12",
+    "vue-ellipse-progress": "^1.3.1",
     "vue-router": "^3.4.9",
+    "vuex": "^3.6.2",
     "whatwg-fetch": "^3.6.2"
   }
 }
