--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vue": "^2.6.12",
     "vue-ellipse-progress": "^1.3.1",
     "vue-router": "^3.4.9",
+    "vue-slick-carousel": "^1.0.6",
     "vuex": "^3.6.2",
     "whatwg-fetch": "^3.6.2"
   }
