--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
+    "@innologica/vue-dropdown-menu": "^0.1.4",
     "core-js": "^3.10.0",
     "vue": "^2.6.12",
     "vue-ellipse-progress": "^1.3.1",
