--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/runtime": "^7.12.5",
     "@innologica/vue-dropdown-menu": "^0.1.4",
     "core-js": "^3.10.0",
+    "gh-pages": "^4.0.0",
     "vue": "^2.6.12",
     "vue-ellipse-progress": "^1.3.1",
     "vue-router": "^3.4.9",
